# mujoco-wasm-forge

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  package.json
.github/workflows/: abi.yml  ci.yml  forge-325.yml  forge-337.yml  forge.yml
docs/: ABI_SCAN.md  artifacts.md  gates.md  structure.md
local_tools/wsl/: build.sh
scripts/: README.md  ci_replay.ps1
scripts/ci/: post_build.sh
scripts/mujoco_abi/: autogen_wrappers.mjs  check_exports.mjs  ci_gate.mjs  diff.mjs  exposure_map.json  functions_map.json  gen_exports_from_abi.mjs  nm_coverage.mjs  run.ps1  scan.mjs
scripts/smoke/: size-check.mjs
tests/: gates-325.mjs  gates-337.mjs  mesh-smoke-337.mjs  mesh-smoke-338.mjs  regression-325.mjs  regression-337.mjs  regression-338.mjs  smoke-325.mjs  smoke-337.mjs  smoke-338.mjs
wrappers/auto/: mjwf_stubs.c
wrappers/official_app_325/: CMakeLists.txt  minimal.c  native_compare.cpp
wrappers/official_app_337/: CMakeLists.txt  minimal.c  native_compare.cpp
wrappers/official_app_337/codegen/: gen_exports.py  spec_337.yaml
wrappers/official_app_337/include/: mjw_exports.h  mjwf_exports.h
wrappers/official_app_337/src/: mjw_compat_minimal.c  mjw_entrypoints.c  mjw_handles.c  mjwf_compat_minimal.c  mjwf_entrypoints.c  mjwf_handles.c
wrappers/official_app_338/: CMakeLists.txt
wrappers/official_app_338/codegen/: gen_exports.py
wrappers/official_app_338/include/: mjwf_exports.h
wrappers/official_app_338/src/: mjwf_entrypoints.c  mjwf_handles.c
